--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -136,7 +136,7 @@
                 motivo.nombreMotivo}}, </section>
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <section [innerHTML]="descripcion.resumenJustificacion" style="margin-left: 2em"></section>
+              <section [innerHTML]="descripcion.resumenJustificacion"></section>
               <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
@@ -166,7 +166,7 @@
               <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{
                 descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
-              <section [innerHTML]="descripcion.conceptoTecnico" style="margin-left: 2em"></section>
+              <section [innerHTML]="descripcion.conceptoTecnico"></section>
               <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
               <p><strong>Número de radicado en FFIE de solicitud: </strong> {{ descripcion.numeroRadicado }}</p>
             </mat-card-content>
@@ -228,7 +228,6 @@
         </p>
         <section 
                         [innerHTML]="novedad.observacionDevolucion.observaciones"
-                        style="margin-left: 2em"
                         
                 ></section>
       </mat-card-content>
@@ -250,8 +249,8 @@
       </p>
       <div>
           <section 
+            class="text-justify"
             [innerHTML]="novedad.causaRechazo"
-            style="margin-left: 2em"
             
     ></section>
       </div>
