--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-soporte-solicitud/form-soporte-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-soporte-solicitud/form-soporte-solicitud.component.html
@@ -13,12 +13,26 @@
           addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched ||
           addressForm.get('urlSoporte').invalid && estaEditando">URL con soporte</label>
         </div>
-        <div class="col pr-3em">
+        <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="url" formControlName="urlSoporte" required>
           </mat-form-field>
           <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte de la novedad</span>
         </div>
+        <span class="icon-incompleto">
+          <img
+            class="icon-incompleto--img"
+            src="assets/img/icon/incompleto.svg"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
+            *ngIf="
+              (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+              (addressForm.get('urlSoporte').invalid && estaEditando)
+            "
+          />
+        </span>
       </div>
 
     </mat-card-content>
