--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -1,14 +1,13 @@
 <section class="container">
   <div class="container text-center">
     <div class="text-right">
-      <a routerLink=".." mat-button color="primary" class="btn-regresar">
-        <img src="assets/img/icon/regresar.svg" alt="Regresar">
+      <a routerLink="../.." mat-button color="primary" class="btn-regresar">
+        <img src="assets/img/icon/regresar.svg" alt="Regresar" />
       </a>
     </div>
     <h1 class="title-menu--h1" *ngIf="novedad">
-      
       {{ novedad.novedadContractualId === undefined ? 'Registrar' : 'Ver detalle/Editar registro' }}
-       solicitud de novedad contractual {{ novedad.novedadContractualId === undefined ? '' : novedad.numeroSolicitud }}
+      solicitud de novedad contractual {{ novedad.novedadContractualId === undefined ? '' : novedad.numeroSolicitud }}
     </h1>
   </div>
 
@@ -16,21 +15,38 @@
     <div class="col-md-8">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" for="numeroContrato">Número de contrato:</label>
+          <label
+            class="label-left"
+            for="numeroContrato"
+            [class.color-secondaryColor]="
+              (numeroContrato.invalid && numeroContrato.touched) || (numeroContrato.invalid && estaEditando)
+            "
+          >
+            Número de contrato:
+          </label>
         </div>
         <div class="col d-flex">
           <mat-form-field class="example-full-width">
-            <input #buscar type="text" aria-label="Number" matInput [formControl]="numeroContrato"
-              [matAutocomplete]="auto" required>
+            <input
+              #buscar
+              type="text"
+              aria-label="Number"
+              matInput
+              [formControl]="numeroContrato"
+              [matAutocomplete]="auto"
+              required
+            />
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-              <mat-option class="autocomplete"
-              (click)="seleccionAutocomplete(option)"
-               *ngFor="let option of filteredOptions | async" [value]="option.numeroContrato">
-                {{option.numeroContrato}}
+              <mat-option
+                class="autocomplete"
+                (click)="seleccionAutocomplete(option)"
+                *ngFor="let option of filteredOptions | async"
+                [value]="option.numeroContrato"
+              >
+                {{ option.numeroContrato }}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-          
         </div>
       </div>
     </div>
@@ -39,7 +55,15 @@
     <div class="col-md-8">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" for="novedadesolicitud">La novedad aplica a:</label>
+          <label
+            class="label-left"
+            for="novedadesolicitud"
+            [class.color-secondaryColor]="
+              (novedadAplicada.invalid && novedadAplicada.touched) || (novedadAplicada.invalid && estaEditando)
+            "
+          >
+            La novedad aplica a:
+          </label>
         </div>
         <div class="col">
           <mat-form-field class="select-width">
@@ -54,40 +78,33 @@
     </div>
   </div>
 
-  <div class="pt-3em animatedDown" *ngIf="novedadAplicada.value === false && proyectos" >
+  <div class="pt-3em animatedDown" *ngIf="novedadAplicada.value === false && proyectos">
     <app-tabla-proyectos-registrar-novedad
-                                            [listaProyectos]="proyectos"
-                                            [proyectoId]="proyecto?.proyectoId"
-                                            (Proyecto)="seleccionarProyecto($event)"
-                                            >
-  </app-tabla-proyectos-registrar-novedad>
+      [listaProyectos]="proyectos"
+      [proyectoId]="proyecto?.proyectoId"
+      (Proyecto)="seleccionarProyecto($event)"
+    >
+    </app-tabla-proyectos-registrar-novedad>
   </div>
 
-  <mat-card class="shipping-card var-main-gris animatedDown" 
-            *ngIf="novedadAplicada.value !== undefined && contrato ">
+  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value !== undefined && contrato">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text">
-        Datos del contrato
-      </mat-card-title>
+      <mat-card-title class="header-card--text"> Datos del contrato </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
-        <strong>
-          Nombre del contratista:
-        </strong>
-        {{contrato?.contratacion.contratista.nombre}}
+        <strong>Nombre del contratista:</strong>
+        {{ contrato?.contratacion.contratista.nombre }}
       </p>
       <p>
         <strong>Tipo de identificación:</strong>
         <span>
-          {{contrato?.contratacion.contratista.tipoIdentificacionNotMapped}}
+          {{ contrato?.contratacion.contratista.tipoIdentificacionNotMapped }}
         </span>
       </p>
       <p>
-        <strong>
-          Número de identificación
-        </strong>
-        {{contrato?.contratacion.contratista.numeroIdentificacion}}
+        <strong>Número de identificación</strong>
+        {{ contrato?.contratacion.contratista.numeroIdentificacion }}
       </p>
       <!-- <p>
         <strong>Tipo de intervención:</strong>
@@ -95,20 +112,34 @@
       </p> -->
       <p>
         <strong>Valor del contrato:</strong>
-        {{contrato?.valor|currency:'':'symbol':'3.0'}}
+        {{ contrato?.valor | currency: '':'symbol':'3.0' }}
       </p>
       <p>
         <strong>Plazo:</strong>
-        {{ contrato?.plazoFase1PreMeses + ( contrato?.plazoFase2ConstruccionMeses ? contrato?.plazoFase2ConstruccionMeses : 0 ) }} meses / 
-        {{ contrato?.plazoFase1PreDias + ( contrato?.plazoFase2ConstruccionDias ? contrato?.plazoFase2ConstruccionDias : 0 ) }} días 
+        {{
+          contrato?.plazoFase1PreMeses +
+            (contrato?.plazoFase2ConstruccionMeses ? contrato?.plazoFase2ConstruccionMeses : 0)
+        }}
+        meses /
+        {{
+          contrato?.plazoFase1PreDias +
+            (contrato?.plazoFase2ConstruccionDias ? contrato?.plazoFase2ConstruccionDias : 0)
+        }}
+        días
       </p>
       <p>
         <strong>Fecha de inicio de contrato:</strong>
-        {{ (contrato?.fechaActaInicioFase2 ? contrato?.fechaActaInicioFase2 : contrato?.fechaActaInicioFase1) | date:'dd/MM/yyyy'}}
+        {{
+          (contrato?.fechaActaInicioFase2 ? contrato?.fechaActaInicioFase2 : contrato?.fechaActaInicioFase1)
+            | date: 'dd/MM/yyyy'
+        }}
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
-        {{ (contrato?.fechaTerminacionFase2 ? contrato?.fechaTerminacionFase2 : contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
+        {{
+          (contrato?.fechaTerminacionFase2 ? contrato?.fechaTerminacionFase2 : contrato?.fechaTerminacion)
+            | date: 'dd/MM/yyyy'
+        }}
       </p>
 
       <div class="animatedDown" *ngIf="novedadAplicada.value === false && proyecto">
@@ -134,7 +165,6 @@
           {{ proyecto.sede }}
         </p>
       </div>
-
     </mat-card-content>
   </mat-card>
 
@@ -145,18 +175,16 @@
                             [proyecto]=proyecto
                             [contrato]=contrato
                             [novedad]=novedad
+                            [estaEditando]="estaEditando"
                             (guardar)="ngOnInit()">
         </app-expansion-panel>
   </div>
   <div *ngIf="novedad.observacionDevolucion">
     <mat-card class="shipping-card var-main-gris">
       <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text">
-          Observaciones del supervisor
-        </mat-card-title>
+        <mat-card-title class="header-card--text"> Observaciones del supervisor </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-
         <p>
           <strong>
             {{ novedad.fechaCreacion | date: 'dd/MM/yyyy' }}
@@ -164,18 +192,11 @@
         </p>
 
         <p>
-          <strong>
-            ¿Desde la supervisión tiene observaciones a la solicitud de novedad?:
-          </strong>
+          <strong> ¿Desde la supervisión tiene observaciones a la solicitud de novedad?: </strong>
           Sí
         </p>
-        <section 
-                        [innerHTML]="novedad.observacionDevolucion.observaciones"
-                        style="margin-left: 2em"
-                        
-                ></section>
+        <section [innerHTML]="novedad.observacionDevolucion.observaciones"></section>
       </mat-card-content>
     </mat-card>
   </div>
-
 </section>
