--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
@@ -164,12 +164,12 @@
     </mat-card>
     <mat-card class="shipping-card var-main-gris" *ngIf="detailavailabilityBudget?.observaciones">
         <mat-card-header class="header-card header-card--margin">
-            <mat-card-title class="mat-card-title header-card--text">
-                    Observaciones
-                </mat-card-title>
+            <mat-card-title class="header-card--text">
+                Observaciones
+            </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-                <div [innerHtml]="detailavailabilityBudget?.observaciones"></div>
+            <div [innerHtml]="detailavailabilityBudget?.observaciones"></div>
         </mat-card-content>
     </mat-card>
 
