--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.scss
@@ -19,7 +19,7 @@
     }
 }
 
-.mat-card-header.header-card {
-    margin-top: -3.2em !important;
-    margin-left: -4.2em;
-}
+// .mat-card-header.header-card {
+//     margin-top: -3.2em !important;
+//     margin-left: -4.2em;
+// }
