bugs reportados por whatsapp 🐛🤳🤳

--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/home/home.component.html
@@ -15,7 +15,7 @@
     </button>
     Bienvenida/o, aquí podrá realizar la verificación de las solicitudes de novedades aprobadas por el interventor de
     los contratos de obra y podrá registrar las solicitudes de novedades para los contratos de interventoría que se
-    encuentran a su cargo, que están activos, que cuentan con póliza aprobada, registro presupuestal y que serán
+    encuentran a su cargo, que están activos, que cuentan con póliza aprobada, registro presupuestal y que estan siendo
     ejecutados en el marco de la gestión del FFIE.
   </div>
 
