--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
@@ -151,6 +151,7 @@
         [EstadosolicitudActa]="EstadosolicitudActa"
         (ActualizarProyectos)="ActualizarProyectos($event)"
         [listaEstadosSolicitud]="estadosArray"
+        [estaEditando]="estaEditando"
       >
       </app-tabla-form-solicitud-multiple>
 
