--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -33,7 +33,6 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del proyecto</th>
       <td mat-cell *matCellDef="let element">
         <div class="d-flex">
-
           <mat-form-field
             class="select-width"
             *ngIf="contratacion.tipoSolicitudCodigo === '1'"
@@ -50,6 +49,21 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <span class="icon-incompleto" *ngIf="contratacion.tipoSolicitudCodigo === '1'">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (element.proyecto.estadoProyectoObraCodigo == 3 && estaEditando) ||
+                (element.proyecto.estadoProyectoObraCodigo == 5 && estaEditando) ||
+                (element.proyecto.estadoProyectoObraCodigo == 7 && estaEditando)
+              "
+            />
+          </span>
           <mat-form-field
             class="select-width"
             *ngIf="contratacion.tipoSolicitudCodigo === '2'"
@@ -66,6 +80,21 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <span class="icon-incompleto" *ngIf="contratacion.tipoSolicitudCodigo === '2'">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (element.proyecto.estadoProyectoInterventoriaCodigo == 3 && estaEditando) ||
+                (element.proyecto.estadoProyectoInterventoriaCodigo == 5 && estaEditando) ||
+                (element.proyecto.estadoProyectoInterventoriaCodigo == 7 && estaEditando)
+              "
+            />
+          </span>
         </div>
       </td>
     </ng-container>
