debug avanceSemanal v2 - fix campo fechaAprobacion garantias y polizas

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
@@ -84,7 +84,8 @@
                 <app-gestion-de-obra    [seguimientoSemanal]="seguimientoSemanal"
                                         [tipoObservaciones]="tipoObservaciones"
                                         [esRegistroNuevo]="esRegistroNuevo"
-                                        (estadoSemaforoGestionObra)="valuePendingSemaforo( $event, 'gestionObra' )">
+                                        (estadoSemaforoGestionObra)="valuePendingSemaforo( $event, 'gestionObra' )"
+                                        (dataGestionAmbiental)="dataGestionAmbiental = $event">
                 </app-gestion-de-obra>
             </mat-expansion-panel>
 
