--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-proyectos-asociados/dialog-proyectos-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-proyectos-asociados/dialog-proyectos-asociados.component.html
@@ -6,7 +6,7 @@
         Proyectos asociados contrato {{ contrato.numeroContrato }}
     </h1>
     <p class="info-sub-title">
-        <span>Fecha de firma del contrato: <b> {{ contrato.fechaAprobacion | date: 'dd/MM/yyyy' }} </b></span>
+        <span>Fecha de inicio del contrato: <b> {{ contrato.fechaAprobacion | date: 'dd/MM/yyyy' }} </b></span>
         <span>Plazo: <b>{{ contrato.plazoMeses }} Meses {{ contrato.plazoDias }} Días</b></span>
     </p>
     <div class="table-responsive">
