--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -14,9 +14,9 @@
     <!-- fechaValidacionNovedad Column -->
     <ng-container matColumnDef="fechaValidacionNovedad">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de solicitud de la novedad
+        Fecha de validación de la novedad
       </th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud | date:'dd/MM/yyyy'}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaValidacion | date:'dd/MM/yyyy'}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
@@ -93,14 +93,15 @@
       </a>
       
       <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-      *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true">
+        *ngIf="element.estadoCodigo === '11' && element?.novedadContractual?.registroCompletoDevolucionTramite === true "
+        (click)="devolverSolicitud(element.novedadContractualId)">
         Devolver solicitud
       </button>
       
-      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+      <!-- <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
       *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true">
         Cancelar novedad
-      </button>
+      </button> -->
       </td>
     </ng-container>
 
