--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -48,7 +48,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la novedad
       </th>
-      <td mat-cell *matCellDef="let element">{{element.estadoCodigoNombre}}</td>
+      <td mat-cell *matCellDef="let element">{{element.estadoDescripcion}}</td>
     </ng-container>
 
     <!-- estadoRegistro Column -->
@@ -76,13 +76,13 @@
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
-          *ngIf="element.estadoCodigo === '11'">
+          *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17'">
           Ver detalle/Editar
         </a>
         
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         (click)="EnviarAComite(element.novedadContractualId)"
-        *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true" >
+        *ngIf="element.estadoCodigo === '17' && element.registroCompletoTramiteNovedades === true" >
           Enviar a comité técnico
         
         </button>
@@ -98,10 +98,11 @@
         Devolver solicitud
       </button>
       
-      <!-- <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-      *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true">
+      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+      (click)="cancelarNovedad(element.novedadContractualId)"
+      *ngIf="element.estadoCodigo === '17' && element.novedadContractual.deseaContinuar === false">
         Cancelar novedad
-      </button> -->
+      </button>
       </td>
     </ng-container>
 
