--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/ver-detalle-perfiles/ver-detalle-perfiles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/ver-detalle-perfiles/ver-detalle-perfiles.component.html
@@ -56,7 +56,7 @@
                   </p>
                   <p>
                     <b>Valor total del proyecto:</b>
-                    <i> {{ contratoProyecto.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }} </i>
+                    <i> {{ contratoProyecto.proyecto.valorObra | currency:'COP':'symbol-narrow':'.0-0' }} </i>
                   </p>
               </mat-card-content>
           </mat-card>
