--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-gestionar-interventoria/expansion-gestionar-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-gestionar-interventoria/expansion-gestionar-interventoria.component.html
@@ -60,7 +60,7 @@
           </p>
           <p>
             <b>Valor total del proyecto:</b>
-            <i> {{ contratacion.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }} </i>
+            <i> {{ contratacion.proyecto.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' }} </i>
           </p>
         </mat-card-content>
       </mat-card>
