--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
@@ -56,7 +56,7 @@
           </p>
           <p>
             <b>Valor total del proyecto:</b>
-            {{ contratoProyecto.proyecto.valorTotal | currency: 'COP':'symbol-narrow':'.0-0' }}
+            {{ contratoProyecto.proyecto.valorInterventoria | currency: 'COP':'symbol-narrow':'.0-0' }}
           </p>
         </mat-card-content>
       </mat-card>
