--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
@@ -64,7 +64,7 @@
 					</p>
 					<p>
 						<b>Valor total del proyecto:</b>
-						<i> {{ contratacion.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }} </i>
+						<i> {{ contratacion.proyecto.valorObra | currency:'COP':'symbol-narrow':'.0-0' }} </i>
 					</p>
 				</mat-card-content>
 			</mat-card>
